Added better fits, and kb-wavelength charting

--- a/Week 8 - CrossPoint/crosspoints.ipynb
+++ b/Week 8 - CrossPoint/crosspoints.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install pandas numpy matplotlib pandas jupyter "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
