k8s prefer to be zero

--- a/Week 11/satcurves_shift.ipynb
+++ b/Week 11/satcurves_shift.ipynb
@@ -1354,16 +1354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f87b1b286a0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f87b20117b8>"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     },
